# email-finance-agent

./: .env.example  README.md  docker-compose.yml  generate_sprints.py  whitepaper.md
.github/workflows/: deploy.yml  pytest.yml
backend/: Dockerfile  entrypoint.sh  start-reload.sh  start.sh
backend/src/: Dockerfile  README.md  alembic.ini  locustfile.py  pyproject.toml  roadmap_implementacao.md  sprints  start-celery.sh
backend/src/alembic/: env.py
backend/src/app/: celery_app.py  config.py  database.py  main.py  models.py  mongo.py  obfuscator.py  schemas.py  security.py  telemetry.py  tenant.py  webhooks_outbound.py
backend/src/app/api/: analytics.py  auth.py  chat.py  documents.py  emails.py  invoices.py  reconciliation.py  review.py  settings.py  websockets.py
backend/src/app/extraction/: confidence.py  layout_model.py  line_items.py  llm_client.py  ocr_engine.py  prompts.py  textract.py
backend/src/app/ingestion/: gmail.py  imap.py  msgraph.py  webhooks.py  whatsapp.py
backend/src/app/integrations/: erp.py
backend/src/app/mcp/: server.py
backend/src/app/processing/: __init__.py  attachments.py  deskew.py  image_cv.py  intent.py  pdf_utils.py  reconciliation.py  tax_compliance.py  vendor_matching.py
backend/src/app/services/: whatsapp_service.py
backend/src/app/storage/: s3.py
backend/src/app/tasks/: email_tasks.py  ocr_tasks.py
backend/src/app/workflows/: hitl.py
backend/src/sprints/: sprint_01.md  sprint_02.md  sprint_03.md  sprint_04.md  sprint_05.md  sprint_06.md  sprint_07.md  sprint_08.md  sprint_09.md  sprint_10.md  sprint_11.md  sprint_12.md  sprint_13.md  sprint_14.md  sprint_15.md  sprint_16.md  sprint_17.md  sprint_18.md  sprint_19.md  sprint_20.md  sprint_21.md  sprint_22.md  sprint_23.md  sprint_24.md  sprint_25.md  sprint_26.md  sprint_27.md  sprint_28.md  sprint_29.md  sprint_30.md  sprint_31.md  sprint_32.md  sprint_33.md  sprint_34.md  sprint_35.md  sprint_36.md  sprint_37.md  sprint_38.md  sprint_39.md  sprint_40.md  (+8 more)
backend/src/tests/: test_main.py
baileys-bridge/: Dockerfile  package.json
front-end/: package-lock.json  package.json
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts
k8s/: backend-deployment.yaml  hpa.yaml  ingress.yaml  secrets.yaml  service.yaml  worker-deployment.yaml
sprints/: sprint_04.md  sprint_07.md  sprint_09.md  sprint_11.md  sprint_12.md  sprint_15.md  sprint_18.md  sprint_21.md  sprint_22.md  sprint_23.md  sprint_30.md  sprint_31.md  sprint_32.md  sprint_33.md  sprint_34.md  sprint_39.md  sprint_40.md  sprint_42.md  sprint_45.md  sprint_46.md  sprint_48.md
(+24 files in other folders)
